# AC_lab2

./: CMakeLists.txt  Makefile
build.ninja/: build.ninja  rules.ninja
